# brzdm

./: AUTHORS  CMakeLists.txt  Copyright  INSTALL  Makefile  README  README.md  THEMES  _config.yml  brzdm.1  brzdm.conf  brzdm.service  index.html  index.md  params.json
backup/: brzdm.conf  strlist.cc  strlist.h
cmake/modules/: FindDBus.cmake  FindIMLIB2.cmake  FindNETTLE.cmake
include/: app.h  brzdm.h  config.h  consolekit.h  const.h  imlib.h  infile.h  numlock.h  panel.h  qrcode.h  screen.h  switchuser.h  utils.h
src/: CMakeLists.txt  app.cc  brzdm.cc  config.cc  consolekit.cc  imlib.cc  infile.cc  numlock.cc  panel.cc  screen.cc  switchuser.cc  utils.cc
themes/: default
themes/breeze/: COPYRIGHT.panel  brzdm.theme
themes/cubism/: COPYRIGHT.background  brzdm.theme
themes/midnight/: brzdm.theme
themes/midnight-2/: brzdm.theme
